--- a/test/browse.html
+++ b/test/browse.html
@@ -10,6 +10,8 @@
 
 <body>
 
+	<div id="map"></div>
+
 	<script>
 
 	/**
@@ -28,7 +30,7 @@
 			 * WARNING: Adding too many zones will kill your browser :-)
 			 */
 
-			'world-north-america',
+			'world',
 		]
 	};
 
@@ -58,7 +60,7 @@
 
 	</script>
 
-	<div id="map"></div>
+	
 
 </body>
 </html>
