--- a/test/browse.html
+++ b/test/browse.html
@@ -30,7 +30,8 @@
 			 * WARNING: Adding too many zones will kill your browser :-)
 			 */
 
-			'world',
+			//'world', 						// (default)
+			'north-america-us-hawaii',		//
 		]
 	};
 
