Changed zone template to only render 11,13,15,17 levels since base pack already reflect 0-10

--- a/test/browse.html
+++ b/test/browse.html
@@ -31,7 +31,9 @@
 			 */
 
 			//'world', 						// (default)
-			'north-america-us-hawaii',		//
+			'world-north-america',
+			'north-america-us-district-of-columbia',
+			//'north-america-us-hawaii',		//
 		]
 	};
 
